--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "google",
   "version": "0.1.0",
-  "homepage": "https://gitname.github.io/react-gh-pages",
+  "homepage": "https://Madhavdua.github.io/Google2.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
