--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-top-loading-bar": "^2.3.1",
@@ -43,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/react": "^12.1.2",
     "gh-pages": "^5.0.0"
   }
 }
