--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+# adding firebase
+/.firebaserc
+/package-lock.json
+/package.json
 # dependencies
 /node_modules
 /.pnp
